# lite3_motion_record_and_replay

./: CMakeLists.txt  README.md  data.txt  init_data.txt  record.cpp  replay.cpp  smooth.cpp  test.cpp  test.txt  test_real.cpp
include/: motionexample.h
src/: motionexample.cpp
